--- a/app/views/players/show.html.erb
+++ b/app/views/players/show.html.erb
@@ -1,2 +1,5 @@
-<h2>Player Profile</h2>
-<%= @player.name %>
+<h1>Player Profile</h1>
+<h2><%= @player.name %></h2>
+
+<%= link_to "Back to Home", root_path %>
+<%= link_to "Player index", players_path %>
