--- a/app/views/welcome/home.erb
+++ b/app/views/welcome/home.erb
@@ -1,5 +1,6 @@
 <h1>Welcome to the CDIG Ping Pong Tracker</h1>
 <h2>Leader board goes here</h2>
+<%= link_to "Player index", players_path%>
 <h2>Add a player</h2>
 <%= link_to "Create a New Player", new_player_path%>
 <h2>Play a game</h2>
