--- a/app/views/players/new.html.erb
+++ b/app/views/players/new.html.erb
@@ -1,6 +1,6 @@
 <h2>Add a new Player</h2>
 
-<%= form_for :player, url: players_path do |f| %>
+<%= form_for @player, url: players_path do |f| %>
 
     <%= f.label :name %>
     <%= f.text_field :name %>
@@ -8,3 +8,4 @@
     <%= f.submit %>
 
 <% end %>
+<%= link_to 'Go Back', :back %>
